# ika_plate_rct_digital

./: CMakeLists.txt  README.md  package.xml  setup.py
ika_plate_rct_digital_driver/: CMakeLists.txt  README.md  package.xml  setup.py
ika_plate_rct_digital_driver/nodes/: ika_plate_driver
ika_plate_rct_digital_driver/src/ika_plate_rct_digital_driver/: __init__.py  ika_ros_driver.py  ika_serial_driver.py
ika_plate_rct_digital_msgs/: CMakeLists.txt  README.md  package.xml
launch/: IKAROS.launch
nodes/: IKADigitalROS
src/ika_rct_digital/: IKADriverROS.py  IKADriverSerial.py  __init__.py
