<?xml version="1.0"?>
<package format="2">
  <name>ika_plate_rct_digital_driver</name>
  <version>1.0.0</version>
  <description>A ROS Driver for IKA RCT Digital Heater-Stirrer. Uses Virtual COM Port to communicate.</description>

  <maintainer email="jglowa@liverpool.ac.uk">Jakub Glowacki</maintainer>

  <license>TODO</license>

  <!-- <url type="website">http://wiki.ros.org/driver_pps4102</url> -->

  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>ika_plate_rct_digital_msgs</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>ika_plate_rct_digital_msgs</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>ika_plate_rct_digital_msgs</exec_depend>

  <export>
  </export>
</package>
